--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -68,6 +68,11 @@
     "Games": {
       "providerPlugin": "awscloudformation",
       "service": "DynamoDB"
+    },
+    "catalogo": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
     }
   }
 }
